# common_crawler

./: .gitignore  README.md  pyproject.toml  requirements.txt  scrapinghub.yml  scrapy.cfg  setup.py
.github/workflows/: deploy.yml
common_crawler/: items.py  middlewares.py  pipelines.py  settings.py
common_crawler/constants/: enums.py
common_crawler/spiders/: __init__.py  appc.py  cellphones.py  core_keeper.py  hhpc.py
common_crawler/spiders/cellphones/: constants.py  mobile.py  models.py  pipelines.py  spider.py
common_crawler/spiders/finances/: gold_gas_price.py
common_crawler/spiders/pc/: base_spider.py  model.py  pipeline.py
common_crawler/utils/: discord.py
