[tool.poetry]
name = "common-crawler"
version = "1.0.1"
description = ""
authors = ["Minh Dao <daoducminh1997@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
scrapy = "^2.11.2"
pendulum = "^3.0.0"
psycopg2-binary = "^2.9.9"
sqlalchemy = "^2.0.35"
sqlalchemy-cockroachdb = "^2.0.2"
itemloaders = "^1.3.2"
pymongo = {extras = ["srv"], version = "^4.10.1"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
